--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
